# src/api/graphql/workspace/model/create-workspace-result.model.ts
@@ -1,7 +1,0 @@
-import { Field, ID, ObjectType } from '@nestjs/graphql';
-
-@ObjectType()
-export class CreateWorkspaceResultModel {
-  @Field(() => ID)
-  workspaceId: string;
-}
