# src/api/rest/workspace/model/create-workspace-result.response.ts
@@ -1,6 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-
-export class CreateWorkspaceResultResponse {
-  @ApiProperty({ type: String })
-  workspaceId: string;
-}
